<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="#ffe0b2"
    tools:context="com.example.android.scarnesdice.MainActivity">

    <TextView
        android:id="@+id/player"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#424242"
        android:textSize="14dp"
        android:text="@string/your_score" />

    <TextView
        android:id="@+id/p_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/player"
        android:text="@string/init_value"
        android:textSize="14dp"
        android:textColor="#424242"
        android:layout_toRightOf="@id/player" />

    <TextView
        android:id="@+id/c_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:textSize="14dp"
        android:textColor="#424242"
        android:text="@string/init_value1" />

    <TextView
        android:id="@+id/computer"
        android:textColor="#424242"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="1dp"
        android:textSize="14dp"
        android:layout_marginRight="1dp"
        android:layout_toStartOf="@id/c_score"
        android:layout_toLeftOf="@id/c_score"
        android:text="@string/computer_score" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dice"
        android:src="@drawable/dice3droll"
        android:layout_below="@+id/c_score"
        android:layout_marginTop="40dp"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="3"
        android:id="@+id/button_layout"
        android:layout_marginTop="180dp">

        <Button
            android:id="@+id/btn_roll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/roll"
            android:onClick="onRollDice"/>

        <Button
            android:id="@+id/btn_hold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hold"
            android:onClick="onHold"/>

        <Button
            android:id="@+id/btn_reset"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reset"
            android:onClick="onReset"/>

    </LinearLayout>

    <TextView
        android:id="@+id/user_turn_score_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/button_layout"
        android:text="@string/your_turn_score"
        android:textColor="#424242"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/user_turn_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_layout"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_toEndOf="@id/user_turn_score_label"
        android:layout_toRightOf="@id/user_turn_score_label"
        android:text="@string/init_value1"
        android:textColor="#424242"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/com_turn_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/button_layout"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/init_value1"
        android:textColor="#424242"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/com_turn_score_label"
        android:layout_width="wrap_content"
        android:textColor="#424242"
        android:layout_height="wrap_content"
        android:layout_below="@id/button_layout"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_toStartOf="@id/com_turn_score"
        android:layout_toLeftOf="@id/com_turn_score"
        android:text="@string/computer_turn_score"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorAccent"
        android:layout_below="@id/com_turn_score_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:textSize="18dp"
        android:id="@+id/Result"/>


</RelativeLayout>